syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.binghe.proto";

message GetMemberRequest {
  int32 id = 1;
}

message GetMemberResponse {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  string description = 4;
}

service MemberGrpcService {
  rpc getMember(GetMemberRequest) returns (GetMemberResponse);
  rpc getMemberServerStream(GetMemberRequest) returns (stream GetMemberResponse);
  rpc getMemberClientStream(stream GetMemberRequest) returns (GetMemberResponse);
  rpc getMemeberBiStream(stream GetMemberRequest) returns (stream GetMemberResponse);
}